增加投标人否决原因，修改物资编辑界面

--- a/TenderInfo/TenderInfo.csproj
+++ b/TenderInfo/TenderInfo.csproj
@@ -616,6 +616,10 @@
     <Compile Include="Migrations\201904030552509_edit1.Designer.cs">
       <DependentUpon>201904030552509_edit1.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201904040107223_edit2.cs" />
+    <Compile Include="Migrations\201904040107223_edit2.Designer.cs">
+      <DependentUpon>201904040107223_edit2.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\Account.cs" />
     <Compile Include="Models\AccountApprove.cs" />
@@ -718,6 +722,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201904030552509_edit1.resx">
       <DependentUpon>201904030552509_edit1.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201904040107223_edit2.resx">
+      <DependentUpon>201904040107223_edit2.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
