完成台账必填项前端验证，加入公式说明

--- a/TenderInfo/TenderInfo.csproj
+++ b/TenderInfo/TenderInfo.csproj
@@ -418,6 +418,7 @@
     <Content Include="Content\zTreeStyle\img\zTreeStandard.gif" />
     <Content Include="Content\zTreeStyle\img\zTreeStandard.png" />
     <Content Include="Content\zTreeStyle\zTreeStyle.css" />
+    <Content Include="Content\控制价公式.PNG" />
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Global.asax" />
     <Content Include="fonts\glyphicons-halflings-regular.woff2" />
