--- a/TenderInfo/TenderInfo.csproj
+++ b/TenderInfo/TenderInfo.csproj
@@ -710,6 +710,7 @@
     <Content Include="Views\Test\LogInfo.cshtml" />
     <Content Include="Views\Account\_PartialApproveEdit.cshtml" />
     <Content Include="Views\Account\_PartialTextShow.cshtml" />
+    <Content Include="Views\Account\_PartialModalEdit.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
