--- a/TenderInfo/Web.config
+++ b/TenderInfo/Web.config
@@ -17,7 +17,10 @@
   </appSettings>
   <system.web>
     <authentication mode="Forms">
-      <forms loginUrl="/Home/Login" name=".ASPXAUTH" timeout="2800" slidingExpiration="true" cookieless="UseCookies">
+      <!--<forms loginUrl="/Home/Login" name=".ASPXAUTH" timeout="2800" slidingExpiration="true" cookieless="UseCookies">
+        <credentials passwordFormat="MD5"></credentials>
+      </forms>-->
+      <forms loginUrl="/Home/Login">
         <credentials passwordFormat="MD5"></credentials>
       </forms>
     </authentication>
